--- a/public/styles.css
+++ b/public/styles.css
@@ -129,11 +129,23 @@ a {
   text-transform: uppercase;
 }
 
+@media screen and (min-width: 769px){
+  .carousel-slide-item__title{
+    margin-left: 1rem !important;
+  }
+}
 
-.carousel-slide-item__body p {
-  font-size: 1.2rem;
-  line-height: 1.3;
-  margin: 0.7rem 0 0;
+@media screen and (max-width: 769px) {
+  .carousel-slide-item__body{
+    margin-left: 7rem;
+  }
+  .carousel-slide-item__title{
+    font-size: 0.7rem;
+    margin-left: 0.5rem !important;
+  }
+  .carousel-slide-item__likes{
+    font-size: 0.5rem;
+  }
 }
 
 .carousel__btn {
@@ -159,8 +171,12 @@ a {
 }
 
 .carousel__btn--shuffle{
-  top: -3rem;
   right: 48%;
+  bottom: 2rem;
+}
+
+.carousel__btn--shuffle{
+  right: 46%;
 }
 
 .carousel__btn-arrow {
